big changes in swaps and compares

--- a/_notebooks/2023-04-5-sorts.ipynb
+++ b/_notebooks/2023-04-5-sorts.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 176,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -35,38 +35,53 @@
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "2 3 3 4 4 4 7 34 34 34 35 35 45 53 53 57 61 87 92 345 535 886 4467 24345 34545 \n",
-      "Time taken for one run: 3300 nanoseconds\n",
-      "Average time taken for 5000 runs: 5833 nanoseconds\n"
+      "14 15 82 95 101 169 179 196 198 242 270 273 284 318 352 376 414 433 438 440 441 462 498 510 523 549 556 589 592 617 660 679 694 700 761 773 774 797 801 808 816 850 909 922 923 932 945 946 969 987 \n",
+      "Number of swaps: 626\n",
+      "Number of compares: 1225\n",
+      "Time taken for one run: 8500 nanoseconds\n",
+      "Average time taken for 5000 runs: 14948 nanoseconds\n"
      ]
     }
    ],
    "source": [
     "public class BubbleSort {\n",
     "\n",
-    "    public static void bubbleSort(int[] arr) {\n",
+    "    public static Object[] bubbleSort(int[] arr) {\n",
     "        int n = arr.length;\n",
+    "        int compare = 0;\n",
+    "        int swap = 0;\n",
     "        // iterate through each element in the array\n",
     "        for (int i = 0; i < n-1; i++) {\n",
     "            // compare adjacent elements in the array\n",
     "            for (int j = 0; j < n-i-1; j++) {\n",
     "                // if the element on the left is greater than the element on the right\n",
+    "                compare ++;\n",
     "                if (arr[j] > arr[j+1]) {\n",
     "                    // swap the two elements\n",
     "                    int temp = arr[j];\n",
     "                    arr[j] = arr[j+1];\n",
     "                    arr[j+1] = temp;\n",
+    "                    swap ++;\n",
     "                }\n",
+    "                \n",
     "            }\n",
     "        }\n",
+    "        Object[] result = { arr, swap, compare };\n",
+    "        return result;\n",
+    "        // System.out.println(\"Number of compares: \" + compare);\n",
+    "        // System.out.println(\"Number of swaps: \" + swap);\n",
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
     "        // create an array of integers\n",
-    "        int[] arr = {34, 57, 35, 92, 2, 61, 53, 4, 24345, 345, 34, 4, 53, 34, 886, 4, 3, 535, 45, 34545, 7, 3, 35, 87, 4467};\n",
-    "        // sort the array using the bubbleSort function\n",
-    "        bubbleSort(arr);\n",
-    "\n",
+    "        int[] arr = new int[50]; // initialize array with size 20\n",
+    "        int[] arr2 = new int[50];\n",
+    "        \n",
+    "        for (int j = 0; j < 50; j++) {\n",
+    "            arr[j] = (int) (Math.random() * 1000); // generate a random integer between 0 and 999\n",
+    "        }\n",
+    "        \n",
+    "        Object[] result = bubbleSort(arr);\n",
     "        long startTime = System.nanoTime();\n",
     "        bubbleSort(arr);\n",
     "        long endTime = System.nanoTime();\n",
@@ -74,9 +89,12 @@
     "        \n",
     "        long totalTime = 0;\n",
     "        for (int i = 0; i < 5000; i++) {\n",
-    "            int[] arrCopy = arr.clone();\n",
+    "            \n",
     "            long startTime2 = System.nanoTime();\n",
-    "            bubbleSort(arrCopy);\n",
+    "            for (int j = 0; j < 50; j++) {\n",
+    "                arr2[j] = (int) (Math.random() * 1000); // generate a random integer between 0 and 999\n",
+    "            }\n",
+    "            bubbleSort(arr2);\n",
     "            long endTime2 = System.nanoTime();\n",
     "            totalTime += (endTime2 - startTime2);\n",
     "        }\n",
@@ -86,11 +104,12 @@
     "        // print out the sorted array\n",
     "        System.out.println(\"Sorted array:\");\n",
     "        for (int i = 0; i < arr.length; i++) {\n",
-    "            System.out.print(arr[i] + \" \");\n",
+    "            System.out.print(arr2[i] + \" \");\n",
     "        }\n",
     "\n",
     "        System.out.println(\"\");\n",
-    "\n",
+    "        System.out.println(\"Number of swaps: \" + result[1]);\n",
+    "        System.out.println(\"Number of compares: \" + result[2]);\n",
     "        System.out.println(\"Time taken for one run: \" + duration + \" nanoseconds\");\n",
     "        \n",
     "        System.out.println(\"Average time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
@@ -122,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 178,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -134,24 +153,30 @@
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "2 4 10 11 12 35 46 54 67 90 134 325 354 434 532 653 896 899 4579 \n",
-      "Time taken for one run: 3200 nanoseconds\n",
-      "Average time taken for 5000 runs: 3685 nanoseconds\n"
+      "20 26 58 62 72 75 118 148 211 216 250 256 260 273 287 305 351 357 371 379 379 385 408 461 462 483 493 518 563 605 628 631 637 679 683 728 752 763 797 809 853 855 857 867 871 887 892 929 937 967 \n",
+      "Number of swaps: 112\n",
+      "Number of compares: 1225\n",
+      "Time taken for one run: 7400 nanoseconds\n",
+      "Average time taken for 5000 runs: 9900 nanoseconds\n"
      ]
     }
    ],
    "source": [
     "public class SelectionSort {\n",
     "\n",
-    "    public static void selectionSort(int[] arr) {\n",
+    "    public static Object[] selectionSort(int[] arr) {\n",
     "        int n = arr.length;\n",
+    "        int compare = 0;\n",
+    "        int swap = 0;\n",
     "        // iterate through each element in the array\n",
     "        for (int i = 0; i < n-1; i++) {\n",
     "            // find the minimum element in the unsorted part of the array\n",
     "            int minIndex = i;\n",
     "            for (int j = i+1; j < n; j++) {\n",
+    "                compare ++;\n",
     "                if (arr[j] < arr[minIndex]) {\n",
     "                    minIndex = j;\n",
+    "                    swap ++;\n",
     "                }\n",
     "            }\n",
     "            // swap the minimum element with the first element in the unsorted part of the array\n",
@@ -159,14 +184,21 @@
     "            arr[minIndex] = arr[i];\n",
     "            arr[i] = temp;\n",
     "        }\n",
+    "        \n",
+    "        Object[] result = { arr, swap, compare };\n",
+    "        return result;\n",
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
     "        // create an array of integers\n",
-    "        int[] arr = {46,134, 10, 12, 2, 11, 90,354,325,67,532,899,653,4579,896,4,434,54,35};\n",
-    "        // sort the array using the selectionSort function\n",
-    "        selectionSort(arr);\n",
+    "        int[] arr = new int[50]; // initialize array with size 20\n",
+    "        int[] arr2 = new int[50];\n",
     "\n",
+    "        for (int j = 0; j < 50; j++) {\n",
+    "            arr[j] = (int) (Math.random() * 1000); // generate a random integer between 0 and 999\n",
+    "        }\n",
+    "        Object[] result = selectionSort(arr);\n",
+    "        \n",
     "        long startTime = System.nanoTime();\n",
     "        selectionSort(arr);\n",
     "        long endTime = System.nanoTime();\n",
@@ -174,9 +206,12 @@
     "\n",
     "        long totalTime = 0;\n",
     "        for (int i = 0; i < 5000; i++) {\n",
-    "            int[] arrCopy = arr.clone();\n",
+    "            \n",
     "            long startTime2 = System.nanoTime();\n",
-    "            selectionSort(arrCopy);\n",
+    "            for (int j = 0; j < 50; j++) {\n",
+    "                arr2[j] = (int) (Math.random() * 1000); // generate a random integer between 0 and 999\n",
+    "            }\n",
+    "            selectionSort(arr2);\n",
     "            long endTime2 = System.nanoTime();\n",
     "            totalTime += (endTime2 - startTime2);\n",
     "        }\n",
@@ -185,11 +220,13 @@
     "        // print out the sorted array\n",
     "        System.out.println(\"Sorted array:\");\n",
     "        for (int i = 0; i < arr.length; i++) {\n",
-    "            System.out.print(arr[i] + \" \");\n",
+    "            System.out.print(arr2[i] + \" \");\n",
     "        }\n",
     "\n",
     "        System.out.println(\"\");\n",
     "\n",
+    "        System.out.println(\"Number of swaps: \" + result[1]);\n",
+    "        System.out.println(\"Number of compares: \" + result[2]);\n",
     "        System.out.println(\"Time taken for one run: \" + duration + \" nanoseconds\");\n",
     "        \n",
     "        System.out.println(\"Average time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
@@ -220,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 216,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -232,35 +269,48 @@
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "3 4 5 13 23 30 45 54 56 65 78 82 234 304 323 354 456 640 6754 \n",
-      "Time taken for one run: 3500 nanoseconds\n",
-      "Average time taken for 5000 runs: 3480 nanoseconds\n"
+      "39 44 64 94 105 152 161 169 177 180 190 207 219 240 240 244 297 303 309 316 325 330 430 448 456 479 511 513 527 531 543 557 611 635 727 740 745 752 760 772 785 813 891 909 914 919 930 937 938 995 \n",
+      "Number of swaps: 598\n",
+      "Number of compares: 49\n",
+      "Time taken for one run: 5700 nanoseconds\n",
+      "Average time taken for 5000 runs: 6452 nanoseconds\n"
      ]
     }
    ],
    "source": [
     "public class InsertionSort {\n",
     "\n",
-    "    public static void insertionSort(int[] arr) {\n",
+    "    public static Object[] insertionSort(int[] arr) {\n",
     "        int n = arr.length;\n",
+    "        int compare = 0;\n",
+    "        int swap = 0;\n",
     "        // iterate through each element in the array\n",
     "        for (int i = 1; i < n; i++) {\n",
     "            // insert the i-th element into the correct position in the sorted part of the array\n",
     "            int key = arr[i];\n",
     "            int j = i - 1;\n",
+    "            compare ++;\n",
     "            while (j >= 0 && arr[j] > key) {\n",
     "                arr[j+1] = arr[j];\n",
     "                j--;\n",
+    "                swap ++;\n",
     "            }\n",
     "            arr[j+1] = key;\n",
     "        }\n",
+    "        Object[] result = { arr, swap, compare };\n",
+    "        return result;\n",
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
     "        // create an array of integers\n",
-    "        int[] arr = {640, 304, 65, 82, 5, 13, 30,234,54,56,3,23,456,78,4,45,323,6754,354};\n",
+    "        int[] arr = new int[50]; // initialize array with size 20\n",
+    "        int[] arr2 = new int[50];\n",
     "        // sort the array using the insertionSort function\n",
-    "        insertionSort(arr);\n",
+    "        for (int j = 0; j < 50; j++) {\n",
+    "            arr[j] = (int) (Math.random() * 1000); // generate a random integer between 0 and 999\n",
+    "        }\n",
+    "\n",
+    "        Object[] result = insertionSort(arr);\n",
     "\n",
     "        long startTime = System.nanoTime();\n",
     "        insertionSort(arr);\n",
@@ -269,9 +319,12 @@
     "\n",
     "        long totalTime = 0;\n",
     "        for (int i = 0; i < 5000; i++) {\n",
-    "            int[] arrCopy = arr.clone();\n",
+    "            \n",
     "            long startTime2 = System.nanoTime();\n",
-    "            insertionSort(arrCopy);\n",
+    "            for (int j = 0; j < 50; j++) {\n",
+    "                arr2[j] = (int) (Math.random() * 1000); // generate a random integer between 0 and 999\n",
+    "            }\n",
+    "            insertionSort(arr2);\n",
     "            long endTime2 = System.nanoTime();\n",
     "            totalTime += (endTime2 - startTime2);\n",
     "        }\n",
@@ -280,11 +333,12 @@
     "        // print out the sorted array\n",
     "        System.out.println(\"Sorted array:\");\n",
     "        for (int i = 0; i < arr.length; i++) {\n",
-    "            System.out.print(arr[i] + \" \");\n",
+    "            System.out.print(arr2[i] + \" \");\n",
     "        }\n",
     "        \n",
     "        System.out.println(\"\");\n",
-    "\n",
+    "        System.out.println(\"Number of swaps: \" + result[1]);\n",
+    "        System.out.println(\"Number of compares: \" + result[2]);\n",
     "        System.out.println(\"Time taken for one run: \" + duration + \" nanoseconds\");\n",
     "        \n",
     "        System.out.println(\"Average time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
@@ -316,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 270,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -328,14 +382,18 @@
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "12 34 43 123 132 164 234 234 323 466 725 \n",
-      "Time taken for one run: 2600 nanoseconds\n",
-      "Average time taken for 5000 runs: 3363 nanoseconds\n"
+      "15 27 66 68 139 162 372 454 502 502 505 561 567 569 591 663 715 761 830 867 \n",
+      "Time taken for one run: 4500 nanoseconds\n",
+      "Number of swaps: 880352\n",
+      "Number of compares: 635172\n",
+      "Average time taken for 5000 runs: 6060 nanoseconds\n"
      ]
     }
    ],
    "source": [
     "public class MergeSort {\n",
+    "    private static int compare = 0;\n",
+    "    private static int swap = 0;\n",
     "\n",
     "    public static void mergeSort(int[] arr, int left, int right) {\n",
     "        if (left < right) {\n",
@@ -372,6 +430,8 @@
     "        int i = 0, j = 0;\n",
     "        int k = left;\n",
     "        while (i < n1 && j < n2) {\n",
+    "            compare ++;\n",
+    "            \n",
     "            if (leftArray[i] <= rightArray[j]) {\n",
     "                arr[k] = leftArray[i];\n",
     "                i++;\n",
@@ -380,6 +440,7 @@
     "                j++;\n",
     "            }\n",
     "            k++;\n",
+    "            swap ++;\n",
     "        }\n",
     "\n",
     "        // copy any remaining elements from the left and right subarrays into the original array\n",
@@ -387,22 +448,29 @@
     "            arr[k] = leftArray[i];\n",
     "            i++;\n",
     "            k++;\n",
+    "            swap ++;\n",
     "        }\n",
     "        while (j < n2) {\n",
     "            arr[k] = rightArray[j];\n",
     "            j++;\n",
     "            k++;\n",
+    "            swap ++;\n",
     "        }\n",
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
     "        // create an array of integers\n",
-    "        int[] arr = {164, 234, 725, 132, 323, 123,234,466,43,12,34};\n",
+    "        int[] arr = new int[50]; // initialize array with size 20\n",
+    "        int[] arr2 = new int[50];\n",
     "        int n = arr.length;\n",
     "\n",
+    "        for (int j = 0; j < 50; j++) {\n",
+    "            arr[j] = (int) (Math.random() * 1000); // generate a random integer between 0 and 999\n",
+    "        }\n",
     "        // sort the array using the mergeSort function\n",
     "        mergeSort(arr, 0, n - 1);\n",
     "\n",
+    "        \n",
     "        long startTime = System.nanoTime();\n",
     "        mergeSort(arr, 0, n - 1);\n",
     "        long endTime = System.nanoTime();\n",
@@ -421,13 +489,18 @@
     "        long totalDuration = 0;\n",
     "        for (int i = 0; i < 5000; i++) {\n",
     "            long startTime2 = System.nanoTime();\n",
-    "            mergeSort(arr, 0, n - 1);\n",
+    "            for (int j = 0; j < 50; j++) {\n",
+    "                arr2[j] = (int) (Math.random() * 1000); // generate a random integer between 0 and 999\n",
+    "            }\n",
+    "            mergeSort(arr2, 0, n - 1);\n",
     "            long endTime2 = System.nanoTime();\n",
     "            totalDuration += (endTime2 - startTime2);\n",
     "        }\n",
     "\n",
     "        // calculate the average time it takes to sort the array and print it out\n",
     "        long avgDuration = totalDuration / 5000;\n",
+    "        System.out.println(\"Number of swaps: \" + swap);\n",
+    "        System.out.println(\"Number of compares: \" + compare);\n",
     "        System.out.println(\"Average time taken for 5000 runs: \" + avgDuration + \" nanoseconds\");\n",
     "    }\n",
     "}\n",
@@ -458,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -466,11 +539,23 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hashmap look up time: 4700 nanoseconds\n",
-      "Binary search time: 8200 nanoseconds\n"
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            int startTime2 = \u001b[0m\u001b[1m\u001b[30m\u001b[41mSystem.nanoTime()\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
+      "\u001b[1m\u001b[31mincompatible types: possible lossy conversion from long to int\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            int lookUpTime = (lookUp(hashmap, \u001b[0m\u001b[1m\u001b[30m\u001b[41mMath.random() * 5000\u001b[0m\u001b[1m\u001b[30m));\u001b[0m",
+      "\u001b[1m\u001b[31mincompatible types: double cannot be converted to java.lang.Integer\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            int endTime2 = \u001b[0m\u001b[1m\u001b[30m\u001b[41mSystem.nanoTime()\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
+      "\u001b[1m\u001b[31mincompatible types: possible lossy conversion from long to int\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        System.out.println(\"Hashmap look up time: \" + \u001b[0m\u001b[1m\u001b[30m\u001b[41mlookUpTime\u001b[0m\u001b[1m\u001b[30m + \" nanoseconds\");\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable lookUpTime\u001b[0m",
+      ""
      ]
     }
    ],
@@ -494,8 +579,17 @@
     "\n",
     "        // Measure the time it takes to look up the key '12' in the 'hashmap' using the 'lookUp' method,\n",
     "        // and print the time taken in nanoseconds.\n",
-    "        long lookUpTime = (lookUp(hashmap, 36));\n",
+    "        long totalDuration = 0;\n",
+    "        for (int i = 0; i < 5000; i++) {\n",
+    "            long startTime2 = System.nanoTime();\n",
+    "            long lookUpTime = (lookUp(hashmap, Math.random() * 5000));\n",
+    "            long endTime2 = System.nanoTime();\n",
+    "            totalDuration += (endTime2 - startTime2);\n",
+    "        }\n",
+    "        long avgDuration = totalDuration / 5000;\n",
+    "\n",
     "        System.out.println(\"Hashmap look up time: \" + lookUpTime + \" nanoseconds\");\n",
+    "        System.out.println(\"Hashmap average look up time: \" + avgDuration + \" nanoseconds\");\n",
     "\n",
     "        // Measure the time it takes to search for the integer value '12' in the 'list' using a binary search algorithm\n",
     "        // implemented in the 'binarySearchTime' method, and print the time taken in nanoseconds.\n",
