--- a/_notebooks/2023-04-5-sorts.ipynb
+++ b/_notebooks/2023-04-5-sorts.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 314,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -539,63 +539,57 @@
    },
    "outputs": [
     {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            int startTime2 = \u001b[0m\u001b[1m\u001b[30m\u001b[41mSystem.nanoTime()\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
-      "\u001b[1m\u001b[31mincompatible types: possible lossy conversion from long to int\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            int lookUpTime = (lookUp(hashmap, \u001b[0m\u001b[1m\u001b[30m\u001b[41mMath.random() * 5000\u001b[0m\u001b[1m\u001b[30m));\u001b[0m",
-      "\u001b[1m\u001b[31mincompatible types: double cannot be converted to java.lang.Integer\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            int endTime2 = \u001b[0m\u001b[1m\u001b[30m\u001b[41mSystem.nanoTime()\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
-      "\u001b[1m\u001b[31mincompatible types: possible lossy conversion from long to int\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        System.out.println(\"Hashmap look up time: \" + \u001b[0m\u001b[1m\u001b[30m\u001b[41mlookUpTime\u001b[0m\u001b[1m\u001b[30m + \" nanoseconds\");\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable lookUpTime\u001b[0m",
-      ""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hashmap search average time: 2049.94 nanoseconds\n",
+      "Binary search average time: 2339.08 nanoseconds\n"
      ]
     }
    ],
    "source": [
     "import java.util.HashMap;\n",
-    "import java.lang.Integer;\n",
-    "import java.util.Scanner;\n",
+    "import java.util.Random;\n",
     "\n",
-    "public class Hash {\n",
-    "    public static void main(String[] args){\n",
+    "public class Search {\n",
     "\n",
+    "    public static void main(String[] args) {\n",
+    "        \n",
     "        HashMap<Integer, Integer> hashmap = new HashMap<Integer, Integer>();\n",
     "        int[] list = new int[5000];\n",
+    "        Random rand = new Random();\n",
     "\n",
-    "        // Add to the 'hashmap' and 'list' with random integer values between 0 and 5000.\n",
+    "        // Add random integer values between 0 and 5000 to the 'hashmap' and 'list'.\n",
     "        for (int i = 0; i < list.length; i++) {\n",
-    "            Integer value = (int) (Math.random() * 5000);\n",
+    "            Integer value = rand.nextInt(5000);\n",
     "            hashmap.put(value, value);\n",
     "            list[i] = value;\n",
     "        }\n",
     "\n",
-    "        // Measure the time it takes to look up the key '12' in the 'hashmap' using the 'lookUp' method,\n",
-    "        // and print the time taken in nanoseconds.\n",
-    "        long totalDuration = 0;\n",
+    "        long hashTotalTime = 0;\n",
+    "        long binaryTotalTime = 0;\n",
+    "\n",
+    "        // Search for a new random value 5000 times using hashmap and binary search.\n",
     "        for (int i = 0; i < 5000; i++) {\n",
-    "            long startTime2 = System.nanoTime();\n",
-    "            long lookUpTime = (lookUp(hashmap, Math.random() * 5000));\n",
-    "            long endTime2 = System.nanoTime();\n",
-    "            totalDuration += (endTime2 - startTime2);\n",
+    "            int searchValue = rand.nextInt(5000);\n",
+    "\n",
+    "            // Measure the time it takes to look up the search value in the 'hashmap' using the 'lookUp' method.\n",
+    "            long hashTime = lookUp(hashmap, searchValue);\n",
+    "            hashTotalTime += hashTime;\n",
+    "\n",
+    "            // Measure the time it takes to search for the search value in the 'list' using the binary search algorithm\n",
+    "            // implemented in the 'binarySearchTime' method.\n",
+    "            long binaryTime = binarySearchTime(list, searchValue);\n",
+    "            binaryTotalTime += binaryTime;\n",
     "        }\n",
-    "        long avgDuration = totalDuration / 5000;\n",
     "\n",
-    "        System.out.println(\"Hashmap look up time: \" + lookUpTime + \" nanoseconds\");\n",
-    "        System.out.println(\"Hashmap average look up time: \" + avgDuration + \" nanoseconds\");\n",
+    "        // Calculate the average time taken for each search operation using hashmap and binary search.\n",
+    "        double hashAvgTime = (double) hashTotalTime / 5000;\n",
+    "        double binaryAvgTime = (double) binaryTotalTime / 5000;\n",
     "\n",
-    "        // Measure the time it takes to search for the integer value '12' in the 'list' using a binary search algorithm\n",
-    "        // implemented in the 'binarySearchTime' method, and print the time taken in nanoseconds.\n",
-    "        long binarySearchTime = (binarySearchTime(list, 36));\n",
-    "        System.out.println(\"Binary search time: \" + binarySearchTime + \" nanoseconds\");\n",
-    "        \n",
+    "        System.out.println(\"Hashmap search average time: \" + hashAvgTime + \" nanoseconds\");\n",
+    "        System.out.println(\"Binary search average time: \" + binaryAvgTime + \" nanoseconds\");\n",
+    "\n",
     "    }\n",
     "\n",
     "    // This method takes a HashMap<Integer, Integer> object and an Integer value as parameters,\n",
@@ -626,8 +620,20 @@
     "        long end = System.nanoTime();\n",
     "        return (end - start); \n",
     "    }\n",
+    "\n",
     "}\n",
-    "Hash.main(null);"
+    "Search.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hash Map and Binary Search Analysis\n",
+    "- Hashmap has a Big O speed of O(1) while binary Search has a Big O speed of O(log n) which is faster\n",
+    "- Hashmap can have more collisions which causes a slower search\n",
+    "- Binary search can thus sometimes be faster than a hashmap"
    ]
   },
   {
