--- a/_notebooks/2023-04-20-pop_quiz.ipynb
+++ b/_notebooks/2023-04-20-pop_quiz.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 94,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -26,9 +26,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starships: 65\n",
-      "Asteroids: 40\n",
-      "Count: 2\n"
+      "Title: Starships\n",
+      "ID: 992118609\n",
+      "Title: Asteroids\n",
+      "ID: 362542593\n",
+      "\n",
+      "Book Count: 2\n"
      ]
     }
    ],
@@ -40,15 +43,14 @@
     "    public static double time;\n",
     "\n",
     "\n",
-    "    public Book(int id, String title) { // setter\n",
-    "        this.id = id;\n",
+    "    public Book(String title) { // setter\n",
     "        this.title = title;\n",
     "        this.time = System.nanoTime();\n",
     "        count ++;\n",
     "    }\n",
     "\n",
     "    public String toString() { // getter\n",
-    "        return title;\n",
+    "        return \"Title: \" + title;\n",
     "    }\n",
     "\n",
     "    public int getBookCount() {\n",
@@ -64,12 +66,19 @@
     "    }\n",
     "    \n",
     "    public static void main(String[] args) {\n",
-    "        Book book1 = new Book((int) (Math.random()*100), \"Starships\");\n",
-    "        Book book2 = new Book((int) (Math.random()*100), \"Asteroids\");\n",
-    "\n",
-    "        System.out.println(book1.title + \": \" + book1.id);\n",
-    "        System.out.println(book2.title + \": \" + book2.id); \n",
-    "        System.out.println(\"Count: \" + Book.count);\n",
+    "        Book[] books1 = {\n",
+    "            new Book(\"Starships\"),\n",
+    "            new Book(\"Asteroids\"),\n",
+    "        };\n",
+    "        for (Book i : books1) {\n",
+    "            System.out.println(i);\n",
+    "            System.out.println(\"ID: \" + i.hashCode());\n",
+    "        }\n",
+    "        // System.out.println(book1.title + \": \" + book1.id);\n",
+    "        // System.out.println(book2.title + \": \" + book2.id); \n",
+    "        // System.out.println(\"Count: \" + Book.count);\n",
+    "        System.out.println();\n",
+    "        System.out.println(\"Book Count: \" + Book.count);\n",
     "    }\n",
     "    \n",
     "}\n",
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 123,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -90,14 +99,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Novel 1\n",
-      "Id: 38\n",
-      "Title and Author: The Awakening by Steven Robbers\n",
-      "Book Count: 56\n",
-      "Novel 2\n",
-      "Id: 43\n",
-      "Title and Author: Green Leaves by Tyler Boulder\n",
-      "Book Count: 57\n"
+      "Title: The Awakening\n",
+      "ID: 1141597143\n",
+      "Shelf Life: 960800.0\n",
+      "Title: Green Leaves\n",
+      "ID: 523249130\n",
+      "Shelf Life: 1544500.0\n"
      ]
     }
    ],
@@ -106,8 +113,8 @@
     "    private String author;\n",
     "    private int checkouts;\n",
     "\n",
-    "    public Novel (int id, String title, String author) {\n",
-    "        super(id, title);\n",
+    "    public Novel (String title, String author) {\n",
+    "        super(title);\n",
     "        this.author = author;\n",
     "        this.checkouts = 0;\n",
     "    }\n",
@@ -120,27 +127,32 @@
     "        this.author = author;\n",
     "    }\n",
     "\n",
-    "    // public void checkout() {\n",
-    "    //     checkouts ++;\n",
-    "    //     this.startTime = System.nanoTime();\n",
+    "    // public int getId() {\n",
+    "    //     return this.id;\n",
     "    // }\n",
+    "    // public void setId(int id) {\n",
+    "    //     this.id = id;\n",
+    "    // }\n",
+    "    public void checkout() {\n",
+    "        checkouts ++;\n",
+    "        this.time = System.nanoTime();\n",
+    "    }\n",
     "    public int getCheckouts() {\n",
     "        return this.checkouts;\n",
     "    }\n",
     "    public static void main(String[] args){\n",
     "        \n",
     "        int num = (int) (Math.random()*100);\n",
-    "        Novel novel1 = new Novel(num, \"The Awakening\", \"Steven Robbers\");\n",
-    "        System.out.println(\"Novel 1\");\n",
-    "        System.out.println(\"Id: \" + novel1.id);\n",
-    "        System.out.println(\"Title and Author: \" + novel1.title + \" by \" + novel1.author);\n",
-    "        System.out.println(\"Book Count: \" + count);\n",
     "\n",
-    "        Novel novel2 = new Novel(num + (int) (Math.random()*10), \"Green Leaves\", \"Tyler Boulder\");\n",
-    "        System.out.println(\"Novel 2\");\n",
-    "        System.out.println(\"Id: \" + novel2.id);\n",
-    "        System.out.println(\"Title and Author: \" + novel2.title + \" by \" + novel2.author);\n",
-    "        System.out.println(\"Book Count: \" + count);\n",
+    "        Novel[] novels = {\n",
+    "            new Novel(\"The Awakening\", \"Steven Robbers\"),\n",
+    "            new Novel(\"Green Leaves\", \"Tyler Boulder\"),\n",
+    "        };\n",
+    "        for (Novel i : novels) {\n",
+    "            System.out.println(i);\n",
+    "            System.out.println(\"ID: \" + i.hashCode());\n",
+    "            System.out.println(\"Shelf Life: \" + i.shelfLife());\n",
+    "        }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -149,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 133,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -160,12 +172,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Textbook 1\n",
-      "Id: 40\n",
-      "Title and Publishing Company: Calculus AB by Bernabeo Maths\n",
-      "Novel 2\n",
-      "Id: 45\n",
-      "Title and Publishing Company: Calculus BC by Krenz Addition Co.\n"
+      "Title: Calculus AB\n",
+      "ID: 180249287\n",
+      "Shelf Life: 329500.0\n",
+      "Title: Calculus BC\n",
+      "ID: 2144296853\n",
+      "Shelf Life: 694200.0\n"
      ]
     }
    ],
@@ -174,8 +186,8 @@
     "    private String company;\n",
     "\n",
     "\n",
-    "    Textbook(int id, String title, String company) {\n",
-    "        super(id, title);\n",
+    "    Textbook(String title, String company) {\n",
+    "        super(title);\n",
     "        this.company = company;\n",
     "    }\n",
     "\n",
@@ -188,16 +200,18 @@
     "    }\n",
     "    public static void main(String[] args){\n",
     "        \n",
-    "        int num = (int) (Math.random()*100);\n",
-    "        Textbook textbook1 = new Textbook(num, \"Calculus AB\", \"Bernabeo Maths\");\n",
-    "        System.out.println(\"Textbook 1\");\n",
-    "        System.out.println(\"Id: \" + textbook1.id);\n",
-    "        System.out.println(\"Title and Publishing Company: \" + textbook1.title + \" by \" + textbook1.company);\n",
+    "        Textbook[] textbooks1 = {\n",
+    "            new Textbook(\"Calculus AB\", \"Bernabeo Maths\"),\n",
+    "            new Textbook(\"Calculus BC\", \"Krenz Addition Co.\"),\n",
+    "        };\n",
     "\n",
-    "        Textbook textbook2 = new Textbook(num + (int) (Math.random()*10), \"Calculus BC\", \"Krenz Addition Co.\");\n",
-    "        System.out.println(\"Novel 2\");\n",
-    "        System.out.println(\"Id: \" + textbook2.id);\n",
-    "        System.out.println(\"Title and Publishing Company: \" + textbook2.title + \" by \" + textbook2.company);\n",
+    "        for (Textbook i : textbooks1) {\n",
+    "            System.out.println(i);\n",
+    "            System.out.println(\"ID: \" + i.hashCode());\n",
+    "            System.out.println(\"Shelf Life: \" + i.shelfLife());\n",
+    "        }\n",
+    "        \n",
+    "       \n",
     "    }\n",
     "}\n",
     "\n",
