--- a/_notebooks/2023-04-20-pop_quiz.ipynb
+++ b/_notebooks/2023-04-20-pop_quiz.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 141,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -26,61 +26,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Title: Starships\n",
-      "ID: 992118609\n",
-      "Title: Asteroids\n",
-      "ID: 362542593\n",
+      "Title of Book: Starships\n",
+      "ID: 761642678\n",
+      "Title of Book: Asteroids\n",
+      "ID: 1253464817\n",
       "\n",
-      "Book Count: 2\n"
+      "Book Count: 12\n"
      ]
     }
    ],
    "source": [
     "public class Book {\n",
-    "    protected String title;\n",
-    "    protected int id;\n",
-    "    public static  int count = 0;\n",
-    "    public static double time;\n",
+    "    \n",
+    "    protected String title; // The title of the book\n",
+    "    public static  int count = 0; // total number of Book objects created\n",
+    "    public static double time; // The start time of the Book object in nanoseconds\n",
     "\n",
-    "\n",
-    "    public Book(String title) { // setter\n",
-    "        this.title = title;\n",
-    "        this.time = System.nanoTime();\n",
-    "        count ++;\n",
+    "    // Constructor for the Book class\n",
+    "    public Book(String title) {\n",
+    "        this.title = title; // Set the title of the book\n",
+    "        this.time = System.nanoTime(); // Set the time when the book is created\n",
+    "        count ++; // Number of books goes up each time a new book is added\n",
     "    }\n",
     "\n",
-    "    public String toString() { // getter\n",
-    "        return \"Title: \" + title;\n",
+    "    // Getter for String representation of the Book object\n",
+    "    public String toString() {\n",
+    "        return \"Title of Book: \" + title; // Return the title of the book\n",
     "    }\n",
     "\n",
+    "    // getter for the current count of Book objects\n",
     "    public int getBookCount() {\n",
-    "        return count;\n",
+    "        return count; // Return the count of Book objects\n",
     "    }\n",
     "\n",
+    "    // Method to get the elapsed time since the creation of the Book object\n",
     "    public double shelfLife() {\n",
-    "        return (System.nanoTime() - time);\n",
+    "        return (System.nanoTime() - time); // Calculates the time since creation\n",
     "    }\n",
     "\n",
     "    public boolean expired() {\n",
-    "        return (this.shelfLife() > 5 * 100000000);\n",
+    "        return (this.shelfLife() > 5 * 100000000); // Check if the elapsed time is greater than 5 seconds\n",
     "    }\n",
     "    \n",
+    "    // Tester Method\n",
     "    public static void main(String[] args) {\n",
+    "        // Create an array with two Books\n",
     "        Book[] books1 = {\n",
     "            new Book(\"Starships\"),\n",
     "            new Book(\"Asteroids\"),\n",
     "        };\n",
+    "        // Print the title and id of each Book\n",
     "        for (Book i : books1) {\n",
-    "            System.out.println(i);\n",
-    "            System.out.println(\"ID: \" + i.hashCode());\n",
+    "            System.out.println(i); // Print the title of the book\n",
+    "            System.out.println(\"ID: \" + i.hashCode()); // Print the id of the object\n",
     "        }\n",
-    "        // System.out.println(book1.title + \": \" + book1.id);\n",
-    "        // System.out.println(book2.title + \": \" + book2.id); \n",
-    "        // System.out.println(\"Count: \" + Book.count);\n",
-    "        System.out.println();\n",
-    "        System.out.println(\"Book Count: \" + Book.count);\n",
+    "\n",
+    "        System.out.println(); \n",
+    "        System.out.println(\"Book Count: \" + Book.count); // Print the total count of Book objects\n",
     "    }\n",
-    "    \n",
     "}\n",
     "\n",
     "Book.main(null);"
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 139,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -99,59 +102,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Title: The Awakening\n",
-      "ID: 1141597143\n",
-      "Shelf Life: 960800.0\n",
-      "Title: Green Leaves\n",
-      "ID: 523249130\n",
-      "Shelf Life: 1544500.0\n"
+      "Title of Book: The Awakening\n",
+      "ID: 1872442921\n",
+      "Shelf Life: 879600.0\n",
+      "Title of Book: Green Leaves\n",
+      "ID: 714712510\n",
+      "Shelf Life: 1833600.0\n"
      ]
     }
    ],
    "source": [
-    "class Novel extends Book { \n",
+    "class Novel extends Book { // extends to the parent class\n",
     "    private String author;\n",
     "    private int checkouts;\n",
     "\n",
     "    public Novel (String title, String author) {\n",
-    "        super(title);\n",
-    "        this.author = author;\n",
-    "        this.checkouts = 0;\n",
+    "        super(title); // grabs the title from the Book class\n",
+    "        this.author = author; // sets the author of the class\n",
+    "        this.checkouts = 0; // sets the number of checkouts to 0\n",
     "    }\n",
     "\n",
-    "    public String getAuthor() {\n",
+    "    // Method that gets the author\n",
+    "    public String getAuthor() { \n",
     "        return this.author;\n",
     "    }\n",
     "    \n",
+    "    // setter for the author \n",
     "    public void setAuthor(String author) {\n",
     "        this.author = author;\n",
     "    }\n",
     "\n",
-    "    // public int getId() {\n",
-    "    //     return this.id;\n",
-    "    // }\n",
-    "    // public void setId(int id) {\n",
-    "    //     this.id = id;\n",
-    "    // }\n",
+    "    // setter for the time after the checkout\n",
     "    public void checkout() {\n",
     "        checkouts ++;\n",
     "        this.time = System.nanoTime();\n",
     "    }\n",
+    "\n",
+    "    // getter for the number of checkouts\n",
     "    public int getCheckouts() {\n",
     "        return this.checkouts;\n",
     "    }\n",
+    "\n",
+    "    // Tester class\n",
     "    public static void main(String[] args){\n",
     "        \n",
-    "        int num = (int) (Math.random()*100);\n",
-    "\n",
+    "        // creates an array for the novels\n",
     "        Novel[] novels = {\n",
     "            new Novel(\"The Awakening\", \"Steven Robbers\"),\n",
     "            new Novel(\"Green Leaves\", \"Tyler Boulder\"),\n",
     "        };\n",
-    "        for (Novel i : novels) {\n",
+    "        for (Novel i : novels) { // iterates throught the novels in the array\n",
     "            System.out.println(i);\n",
     "            System.out.println(\"ID: \" + i.hashCode());\n",
-    "            System.out.println(\"Shelf Life: \" + i.shelfLife());\n",
+    "            System.out.println(\"Shelf Life: \" + i.shelfLife()); // prints the time on the shelf\n",
     "        }\n",
     "    }\n",
     "}\n",
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 138,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -172,40 +175,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Title: Calculus AB\n",
-      "ID: 180249287\n",
-      "Shelf Life: 329500.0\n",
-      "Title: Calculus BC\n",
-      "ID: 2144296853\n",
-      "Shelf Life: 694200.0\n"
+      "Title of Book: Calculus AB\n",
+      "ID: 1701010777\n",
+      "Shelf Life: 1129900.0\n",
+      "Title of Book: Calculus BC\n",
+      "ID: 1805954949\n",
+      "Shelf Life: 1567500.0\n"
      ]
     }
    ],
    "source": [
-    "public class Textbook extends Book {\n",
-    "    private String company;\n",
+    "public class Textbook extends Book { // extends fromt the Book class\n",
+    "    private String company; // creates string for the publishing company\n",
     "\n",
     "\n",
     "    Textbook(String title, String company) {\n",
-    "        super(title);\n",
+    "        super(title); // extends to the title from the Book class\n",
     "        this.company = company;\n",
     "    }\n",
     "\n",
+    "    // getter for the company\n",
     "    public String getCompany() {\n",
     "        return this.company;\n",
     "    }\n",
     "\n",
+    "    // setter for the company\n",
     "    public void setCompany(String Company) {\n",
     "        this.company = company;\n",
     "    }\n",
+    "\n",
+    "    // Tester method\n",
     "    public static void main(String[] args){\n",
     "        \n",
+    "        // creates array for textbooks\n",
     "        Textbook[] textbooks1 = {\n",
+    "            // adds to the array\n",
     "            new Textbook(\"Calculus AB\", \"Bernabeo Maths\"),\n",
     "            new Textbook(\"Calculus BC\", \"Krenz Addition Co.\"),\n",
     "        };\n",
     "\n",
-    "        for (Textbook i : textbooks1) {\n",
+    "        for (Textbook i : textbooks1) { // iterates through array\n",
     "            System.out.println(i);\n",
     "            System.out.println(\"ID: \" + i.hashCode());\n",
     "            System.out.println(\"Shelf Life: \" + i.shelfLife());\n",
