--- a/_notebooks/2023-04-20-pop_quiz.ipynb
+++ b/_notebooks/2023-04-20-pop_quiz.ipynb
@@ -15,21 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Title of Book: Starships\n",
-      "ID: 1216506367\n",
+      "ID: 1759185231\n",
+      "Shelf Life: 6173800.0\n",
       "Title of Book: Asteroids\n",
-      "ID: 226553483\n",
+      "ID: 1058020365\n",
+      "Shelf Life: 1.45347E7\n",
       "\n",
       "Book Count: 2\n"
      ]
@@ -79,6 +77,7 @@
     "        for (Book i : books1) {\n",
     "            System.out.println(i); // Print the title of the book\n",
     "            System.out.println(\"ID: \" + i.hashCode()); // Print the id of the object\n",
+    "            System.out.println(\"Shelf Life: \" + i.shelfLife());\n",
     "        }\n",
     "\n",
     "        System.out.println();  \n",
@@ -91,23 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Title of Book: The Awakening\n",
-      "ID: 1872442921\n",
-      "Shelf Life: 879600.0\n",
+      "ID: 1944019648\n",
+      "Shelf Life: 2515000.0\n",
       "Title of Book: Green Leaves\n",
-      "ID: 714712510\n",
-      "Shelf Life: 1833600.0\n"
+      "ID: 1119931946\n",
+      "Shelf Life: 8194900.0\n"
      ]
     }
    ],
@@ -151,7 +146,7 @@
     "            new Novel(\"The Awakening\", \"Steven Robbers\"),\n",
     "            new Novel(\"Green Leaves\", \"Tyler Boulder\"),\n",
     "        };\n",
-    "        for (Novel i : novels) { // iterates throught the novels in the array\n",
+    "        for (Novel i : novels) { // iterates throughout the novels in the array\n",
     "            System.out.println(i);\n",
     "            System.out.println(\"ID: \" + i.hashCode());\n",
     "            System.out.println(\"Shelf Life: \" + i.shelfLife()); // prints the time on the shelf\n",
@@ -164,23 +159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Title of Book: Calculus AB\n",
-      "ID: 1701010777\n",
-      "Shelf Life: 1129900.0\n",
+      "ID: 2098156043\n",
+      "Shelf Life: 3193500.0\n",
       "Title of Book: Calculus BC\n",
-      "ID: 1805954949\n",
-      "Shelf Life: 1567500.0\n"
+      "ID: 1251145001\n",
+      "Shelf Life: 7630900.0\n"
      ]
     }
    ],
@@ -238,7 +229,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
